@@ -9,7 +9,7 @@ rm -f uptests/fn*.log uptests/fn*.txt uptests/fn*.tex
 rc=0
 
 TEXMFCNF=$srcdir/../kpathsea
-TEXINPUTS=$srcdir/ptexdir/tests:.
+TEXINPUTS=$srcdir/tests:.
 export TEXMFCNF TEXINPUTS
 
 # upTeX internal encoding
@@ -31,7 +31,7 @@ for doc in fnさざ波-$fenc; do
   echo '>>> Document:'$doc '  File Encoding:'$fenc '  Internal Encoding:'$ienc
   ./uptex -ini -interaction nonstopmode -jobname=$doc-$ienc -kanji=$fenc --kanji-internal=$ienc --shell-escape $doc.tex >uptests/$doc-$ienc-term.log || $rc=1
   mv $doc-$ienc.txt $doc-$ienc.log $doc-tmp.tex uptests/
-  diff uptests/$doc-$ienc.txt $srcdir/ptexdir/tests/fn-utf8.txt || $rc=2
+  diff uptests/$doc-$ienc.txt $srcdir/tests/fn-utf8.txt || $rc=2
 
 done
 done
@@ -60,7 +60,7 @@ for doc in fnさざ波-$fenc; do
   echo '>>> Document:'$doc '  File Encoding:'$fenc '  Internal Encoding:'$ienc
   ./uptex -ini -interaction nonstopmode -jobname=$doc-$ienc -kanji=$fenc --kanji-internal=$ienc --shell-escape $doc.tex >uptests/$doc-$fenc-term.log || $rc=3
   mv $doc-$ienc.txt $doc-$ienc.log $doc-tmp.tex uptests/
-  diff uptests/$doc-$ienc.txt $srcdir/ptexdir/tests/fn-$fenc.txt || $rc=4
+  diff uptests/$doc-$ienc.txt $srcdir/tests/fn-$fenc.txt || $rc=4
 
 done
 done
